# CIM-Translator

./: README.md  blazegraph_tester.ipynb  mysql_test.ipynb  neo4j_tester.ipynb  pyproject.toml
.github/workflows/: dev-pre-release.yml
cimloader/batch_handlers/: blazegraph_to_mysql.py  naerm_to_neo4j.py
cimloader/converters/: dss_to_cim.py  synergi_to_cim.py
cimloader/databases/: __init__.py  blazegraph.py  mysql.py  neo4j.py
cimloader/databases/uploaders/: __init__.py  neo4j.py
cimloader/extractors/: ditto_extractor.py
cimloader/uploaders/: __init__.py  blazegraph.py
cimloader/web_apis/: naerm_api.py
cimtranslator/databases/uploaders/: __init__.py  neo4j.py
databases/uploaders/: neo4j.py
tests/: blazegraph_tester.ipynb  mysql_test.ipynb  neo4j_tester.ipynb
tests/test_models/: ieee13_2021.xml
